KDE and density plots graphed

--- a/06_matplotlib.ipynb
+++ b/06_matplotlib.ipynb
@@ -604,6 +604,24 @@
    "source": [
     "All other parameters adjustable under the plot() function can be executed on this. The color scal directly corresponds to intensity of the points in the bin."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23ae7ab3",
+   "metadata": {},
+   "source": [
+    "8. Density and KDE plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90aee266",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_df.plot.density()"
+   ]
   }
  ],
  "metadata": {
