--- a/07_linearregression.ipynb
+++ b/07_linearregression.ipynb
@@ -1,66 +1,115 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "0b09a77c",
-   "metadata": {},
-   "source": [
-    "Linear regressions help us make predictions on the future, based on past data that is training phase. \n",
-    "Here we use the diabetes data set in scikit-learn."
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "id": "0b09a77c",
+      "metadata": {
+        "id": "0b09a77c"
+      },
+      "source": [
+        "Linear regressions help us make predictions on the future, based on past data that is training phase.\n",
+        "Here we use the diabetes data set in scikit-learn."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "id": "16365bfa",
+      "metadata": {
+        "id": "16365bfa"
+      },
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.datasets import load_diabetes"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "4a237f01",
+      "metadata": {
+        "id": "4a237f01"
+      },
+      "source": [
+        "Now for implementing, convert this data into a pandas dataframe"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "id": "9c8be187",
+      "metadata": {
+        "id": "9c8be187",
+        "outputId": "b0932c16-0353-4069-c2b2-483951c831f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "          age       sex       bmi        bp        s1        s2        s3  \\\n",
+            "0    0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401   \n",
+            "1   -0.001882 -0.044642 -0.051474 -0.026328 -0.008449 -0.019163  0.074412   \n",
+            "2    0.085299  0.050680  0.044451 -0.005670 -0.045599 -0.034194 -0.032356   \n",
+            "3   -0.089063 -0.044642 -0.011595 -0.036656  0.012191  0.024991 -0.036038   \n",
+            "4    0.005383 -0.044642 -0.036385  0.021872  0.003935  0.015596  0.008142   \n",
+            "..        ...       ...       ...       ...       ...       ...       ...   \n",
+            "437  0.041708  0.050680  0.019662  0.059744 -0.005697 -0.002566 -0.028674   \n",
+            "438 -0.005515  0.050680 -0.015906 -0.067642  0.049341  0.079165 -0.028674   \n",
+            "439  0.041708  0.050680 -0.015906  0.017293 -0.037344 -0.013840 -0.024993   \n",
+            "440 -0.045472 -0.044642  0.039062  0.001215  0.016318  0.015283 -0.028674   \n",
+            "441 -0.045472 -0.044642 -0.073030 -0.081413  0.083740  0.027809  0.173816   \n",
+            "\n",
+            "           s4        s5        s6  \n",
+            "0   -0.002592  0.019907 -0.017646  \n",
+            "1   -0.039493 -0.068332 -0.092204  \n",
+            "2   -0.002592  0.002861 -0.025930  \n",
+            "3    0.034309  0.022688 -0.009362  \n",
+            "4   -0.002592 -0.031988 -0.046641  \n",
+            "..        ...       ...       ...  \n",
+            "437 -0.002592  0.031193  0.007207  \n",
+            "438  0.034309 -0.018114  0.044485  \n",
+            "439 -0.011080 -0.046883  0.015491  \n",
+            "440  0.026560  0.044529 -0.025930  \n",
+            "441 -0.039493 -0.004222  0.003064  \n",
+            "\n",
+            "[442 rows x 10 columns]\n"
+          ]
+        }
+      ],
+      "source": [
+        "data = load_diabetes()\n",
+        "my_df = pd.DataFrame(data.data, columns = data.feature_names)\n",
+        "print(my_df)"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.10"
+    },
+    "colab": {
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16365bfa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.datasets import load_diabetes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4a237f01",
-   "metadata": {},
-   "source": [
-    "Now for implementing, convert this data into a pandas dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c8be187",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = load_diabetes()\n",
-    "my_df = pd.DataFrame(data.data, columns = data.feature_names)\n",
-    "print(my_df)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.10"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
