Target column added for verification

--- a/07_linearregression.ipynb
+++ b/07_linearregression.ipynb
@@ -40,16 +40,16 @@
       "execution_count": 2,
       "id": "9c8be187",
       "metadata": {
-        "id": "9c8be187",
-        "outputId": "b0932c16-0353-4069-c2b2-483951c831f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9c8be187",
+        "outputId": "b0932c16-0353-4069-c2b2-483951c831f7"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "          age       sex       bmi        bp        s1        s2        s3  \\\n",
             "0    0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401   \n",
@@ -86,9 +86,30 @@
         "my_df = pd.DataFrame(data.data, columns = data.feature_names)\n",
         "print(my_df)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "56be3f35",
+      "metadata": {},
+      "source": [
+        "We are trying to predict the values in the next year using LR. To verify we can import the already availible data in this and then predict and cross verify the same."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c3801c35",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "my_df['Target'] = data.target"
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -105,9 +126,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.12.10"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
