Training and test dataset split

--- a/07_linearregression.ipynb
+++ b/07_linearregression.ipynb
@@ -48,8 +48,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "          age       sex       bmi        bp        s1        s2        s3  \\\n",
             "0    0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401   \n",
@@ -102,16 +102,16 @@
       "execution_count": 6,
       "id": "c3801c35",
       "metadata": {
-        "id": "c3801c35",
-        "outputId": "09b88fa3-e367-4ad4-9d75-2fe40b226d26",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "c3801c35",
+        "outputId": "09b88fa3-e367-4ad4-9d75-2fe40b226d26"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "          age       sex       bmi        bp        s1        s2        s3  \\\n",
             "0    0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401   \n",
@@ -146,6 +146,64 @@
       "source": [
         "my_df['Target'] = data.target\n",
         "print(my_df)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "2147c58c",
+      "metadata": {},
+      "source": [
+        "We now need to split all these attributes to X, y variables. X --> all the values that need to be compared.\n",
+        "y --> Known result i.e. The impact of these attributes on the target "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "cbbb7c1e",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X = my_df.drop(\"Target\",axis=1,inplace=True)\n",
+        "y = my_df['Target']"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "e82cd4d7",
+      "metadata": {},
+      "source": [
+        "Now split the data into training and testing in an 80:20 ratio. This can be done using scikit-learn"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "51a82e86",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.model_selection import train_test_split"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "d990347f",
+      "metadata": {},
+      "source": [
+        "We need to do both a X train and test as well as y train and test as we have 2 different var. Test size = 0.2 is 20%. Random_state defines the manual seed. We can see the dimensions of both these datasets"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "bcc70762",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2,random_state=42)\n",
+        "print(\"Training: \", X_train.shape,y_train.shape)\n",
+        "print(\"Testing: \", X_test.shape, y_test.shape)"
       ]
     }
   ],
