Training and test dataset split

--- a/07_linearregression.ipynb
+++ b/07_linearregression.ipynb
@@ -164,7 +164,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X = my_df.drop(\"Target\",axis=1,inplace=True)\n",
+        "X = my_df.drop('Target',axis=1)\n",
         "y = my_df['Target']"
       ]
     },
