Training and test data successfully split

--- a/07_linearregression.ipynb
+++ b/07_linearregression.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "id": "16365bfa",
       "metadata": {
         "id": "16365bfa"
@@ -37,19 +37,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "id": "9c8be187",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9c8be187",
-        "outputId": "3ce75ef9-cb74-45f5-e7c9-efa441d07a9a"
+        "outputId": "9026fb56-8226-4a51-8d99-9391f8d29e42"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "          age       sex       bmi        bp        s1        s2        s3  \\\n",
             "0    0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401   \n",
@@ -99,19 +99,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "id": "c3801c35",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "c3801c35",
-        "outputId": "09b88fa3-e367-4ad4-9d75-2fe40b226d26"
+        "outputId": "e35df199-911d-41b9-d960-ec082a24b355"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "          age       sex       bmi        bp        s1        s2        s3  \\\n",
             "0    0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401   \n",
@@ -151,17 +151,21 @@
     {
       "cell_type": "markdown",
       "id": "2147c58c",
-      "metadata": {},
+      "metadata": {
+        "id": "2147c58c"
+      },
       "source": [
         "We now need to split all these attributes to X, y variables. X --> all the values that need to be compared.\n",
-        "y --> Known result i.e. The impact of these attributes on the target "
+        "y --> Known result i.e. The impact of these attributes on the target"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "cbbb7c1e",
-      "metadata": {},
+      "metadata": {
+        "id": "cbbb7c1e"
+      },
       "outputs": [],
       "source": [
         "X = my_df.drop('Target',axis=1)\n",
@@ -171,16 +175,20 @@
     {
       "cell_type": "markdown",
       "id": "e82cd4d7",
-      "metadata": {},
+      "metadata": {
+        "id": "e82cd4d7"
+      },
       "source": [
         "Now split the data into training and testing in an 80:20 ratio. This can be done using scikit-learn"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "51a82e86",
-      "metadata": {},
+      "metadata": {
+        "id": "51a82e86"
+      },
       "outputs": [],
       "source": [
         "from sklearn.model_selection import train_test_split"
@@ -189,17 +197,34 @@
     {
       "cell_type": "markdown",
       "id": "d990347f",
-      "metadata": {},
+      "metadata": {
+        "id": "d990347f"
+      },
       "source": [
         "We need to do both a X train and test as well as y train and test as we have 2 different var. Test size = 0.2 is 20%. Random_state defines the manual seed. We can see the dimensions of both these datasets"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "bcc70762",
-      "metadata": {},
-      "outputs": [],
+      "metadata": {
+        "id": "bcc70762",
+        "outputId": "1aae7882-636e-4b74-c3f2-8abefd2da1ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training:  (353, 10) (353,)\n",
+            "Testing:  (89, 10) (89,)\n"
+          ]
+        }
+      ],
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2,random_state=42)\n",
         "print(\"Training: \", X_train.shape,y_train.shape)\n",
