Model built and graphing attempt

--- a/07_linearregression.ipynb
+++ b/07_linearregression.ipynb
@@ -48,8 +48,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "          age       sex       bmi        bp        s1        s2        s3  \\\n",
             "0    0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401   \n",
@@ -110,8 +110,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "          age       sex       bmi        bp        s1        s2        s3  \\\n",
             "0    0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401   \n",
@@ -209,16 +209,16 @@
       "execution_count": 6,
       "id": "bcc70762",
       "metadata": {
-        "id": "bcc70762",
-        "outputId": "1aae7882-636e-4b74-c3f2-8abefd2da1ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bcc70762",
+        "outputId": "1aae7882-636e-4b74-c3f2-8abefd2da1ad"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Training:  (353, 10) (353,)\n",
             "Testing:  (89, 10) (89,)\n"
@@ -229,6 +229,161 @@
         "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2,random_state=42)\n",
         "print(\"Training: \", X_train.shape,y_train.shape)\n",
         "print(\"Testing: \", X_test.shape, y_test.shape)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "98129085",
+      "metadata": {},
+      "source": [
+        "Now we can actually create the linear regression"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b14812ec",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.linear_model import LinearRegression\n",
+        "lr = LinearRegression()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "84631948",
+      "metadata": {},
+      "source": [
+        "This creates the linear regression instance and now we need to train our data and test our data on this model."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a031818a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "lr.fit(X_train,y_train) #This is the fit function "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "17a52904",
+      "metadata": {},
+      "source": [
+        "After the training on this is done we can go on to predicting on the test dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c45e1745",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_pred = lr.predict(X_test)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "f49ae5f8",
+      "metadata": {},
+      "source": [
+        "After we have done this part, we can actually compare with the real values because we already have the Target"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1c97e1d5",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
+        "#These will show the performance of the model also called performance metrics"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "4a4abf24",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "r2 = r2_score(y_test, y_pred)\n",
+        "mse = mean_squared_error(y_test, y_pred)\n",
+        "mea = mean_absolute_error(y_test,y_pred)\n",
+        "intercept = lr.intercept_\n",
+        "print(\"r2: \", r2)\n",
+        "print(\"mea: \", mea)\n",
+        "print(\"mse: \", mse)\n",
+        "print(\"Intercept: \", intercept)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "433308a2",
+      "metadata": {},
+      "source": [
+        "Here the r2 score shows how well the model fits the data, higher the better, lies between 0-1. Mathematically variance of the dependent variable (target here) explained by the independent variable\n",
+        "\n",
+        "The mean squared error: The avg squared distance between the predicted and actual values, here the lower the better because if it's closer to the line through the scatter plot it shows accuracy.\n",
+        "\n",
+        "The mean absolute distance: Avg absolute distance between predicted and actual values. Here the lower the better again\n",
+        "\n",
+        "Intercept_ This is the starting point of the regression line on the y-axis. Mathematically the value of dependent variable (target) when the value of the independent variable is 0. \n",
+        "If positive, the target increases as the features increase\n",
+        "If negative, the target decreases as the features decrease"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "ab09407a",
+      "metadata": {},
+      "source": [
+        "We can also graph these. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "64962c70",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "#y --> predictions, x --> actaul values(target)\n",
+        "#If the model fits well the points should lie close to the regression line\n",
+        "plt.scatter(y_test, y_pred, alpha=0.5)\n",
+        "plt.plot([y.min(), y.max()], [y.min(), y.max()], color=\"red\")\n",
+        "plt.xlabel(\"Actual\")\n",
+        "plt.ylabel(\"Predicted\") \n",
+        "plt.title(\"Predicted vs Actual values\")\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "968fa5d4",
+      "metadata": {},
+      "source": [
+        "Now we can plot residuals. Residuals are plotted against the predicted values of the target variables. If the model is a good fit there will be a random point scatter around 0 in the residual plot with no noticable trend"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "62c21360",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "plt.scatter(y_pred,y_test-y_pred,alpha=0.5)\n",
+        "plt.xlabel(\"Predictions\")\n",
+        "plt.ylabel(\"Residuals\")\n",
+        "plt.title(\"Residual plots\")\n",
+        "plt.show()\n"
       ]
     }
   ],
