--- a/06_matplotlib.ipynb
+++ b/06_matplotlib.ipynb
@@ -721,6 +721,14 @@
    "source": [
     "my_df.plot.kde()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3f6cfd8",
+   "metadata": {},
+   "source": [
+    "This is EOF"
+   ]
   }
  ],
  "metadata": {
